--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.16.1",
+    "react-onclickoutside": "^6.12.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
@@ -23,12 +24,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3030 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "e2e": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -49,8 +51,8 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^9.5.3",
     "gh-pages": "^3.2.3",
-    "jest": "^27.5.1",
-    "puppeteer": "^13.5.2"
+    "jest": "^27.5.1"
   }
 }
