--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pawpatrol-frontend",
-  "homepage": "https://josefinelofgren.github.io/pawpatrol",
+  "name": "hund-soker-hem",
+  "homepage": "https://josefinelofgren.github.io/hund-soker-hem",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
